--- a/README.adoc
+++ b/README.adoc
@@ -58,11 +58,11 @@ Dans sa colonne il doit remplir la ligne correspondant à chaque partie qu'il a 
 |         | jar v1 |       |
 |         | application v1 |       |
 |         | Suivi projet V1|        | Les noms de projets sont peu équivoques planification V2 serait mieux. Ne pas oublier les task list dans les issues.
-| 26/05   | Gantt V2  réalisé|      | 
-|         | Doc. Util. V2 |         |         
-|         | Doc. Tec. V2 |          |     
+| 26/05   | Gantt V2  réalisé| link:Gestion%20de%20projet/GANTT-V2-REALISE.pdf[lien]     | 
+|         | Doc. Util. V2 |      link:Gestion%20de%20projet/GANTT-V2-REALISE.pdf[lien]   |         
+|         | Doc. Tec. V2 |  link:Gestion%20de%20projet/doc-technique-v2.adoc[lien]        |     
 |         | Code V2    |            | 
-|         | Recette V2 |            | 
+|         | Recette V2 |     link:Gestion%20de%20projet/Cahier-De-Recette-V2.adoc[lien]       | 
 |         | `jar` projet |          | 
 
 |===
