--- a/README.adoc
+++ b/README.adoc
@@ -61,7 +61,7 @@ Dans sa colonne il doit remplir la ligne correspondant à chaque partie qu'il a 
 | 26/05   | Gantt V2  réalisé| link:Gestion%20de%20projet/GANTT-V2-REALISE.pdf[lien]     | 
 |         | Doc. Util. V2 |      link:Gestion%20de%20projet/doc-utilisateur-v2.adoc[lien]   |         
 |         | Doc. Tec. V2 |  link:Gestion%20de%20projet/doc-technique-v2.adoc[lien]        |     
-|         | Code V2    |            | 
+|         | Code V2    |     link:DailyBank[lien]       | 
 |         | Recette V2 |     link:Gestion%20de%20projet/Cahier-De-Recette-V2.adoc[lien]       | 
 |         | `jar` projet |          | 
 
