--- a/README.adoc
+++ b/README.adoc
@@ -64,6 +64,6 @@ Dans sa colonne il doit remplir la ligne correspondant à chaque partie qu'il a 
 |         | Code V2    |     link:DailyBank[lien]       | 
 |         | Recette V2 |     link:Gestion%20de%20projet/Cahier-De-Recette-V2.adoc[lien]       | 
 |         | javadoc V2 |     link:JavaDoc[lien]       | 
-|         | `jar` projet |          | 
+|         | `jar` projet |    link:https://github.com/IUT-Blagnac/sae2023-bank-1b02/releases/tag/v2.0.0[lien]      | 
 
 |===
