--- a/README.adoc
+++ b/README.adoc
@@ -57,8 +57,8 @@ Dans sa colonne il doit remplir la ligne correspondant à chaque partie qu'il a 
 |         | javadoc v1 |       |
 |         | jar v1 |       |
 |         | application v1 |       |
-|         | Suivi projet V1|        | Les noms de projets sont peu équivoques planification V2 serait mieux. Ne pas oublier les task list dans les issues.
-| 26/05   | Gantt V2  réalisé| link:Gestion%20de%20projet/GANTT-V2-REALISE.pdf[lien]     | 
+|         | Suivi projet V1|        | Les noms de projets sont peu équivoques planification V2 serait mieux. Ne pas oublier les task list dans les issues. 
+| 26/05   | Gantt V2  réalisé| link:Gestion%20de%20projet/GANTT-V2-REALISE.pdf[lien]     | Suivi de projet  : Gantt comparatif bien par contre vous n'avez pas utilisé un vrai outil de gestion de projet.  Il manque les jalons et les prédécesseurs. Il manque toujours label et Task List dans certaines issues (retours V1 non pris en compte !) . J'ai des commits le 29/05 ... la livraison était attendue le 28/05. L'arborescence est à revoir, à faire plutôt par version. Commits non commentés. Note 14/20 
 |         | Doc. Util. V2 |      link:Gestion%20de%20projet/doc-utilisateur-v2.adoc[lien]   |   Manque version, nom appli, nom des dev, date. La presentation du CDCU n'est pas adaptée à la doc user, la cible n'est pas la même !    Je dois aller sur quel dépôt ? Quelle version java ? Les utilisateurs et rôles ne sont pas présentés. Comment je sais si mon action a bien été effectuée (ex. Debit ou crédit ?). Il faut ordonner les fonctionnalités par utilisateur plutôt que par version. Ne pas renvoyer vers le cahier de recette, ce document n'est pas destiné aux utilisateurs. NOTE 12/20 
 |         | Doc. Tec. V2 |  link:Gestion%20de%20projet/doc-technique-v2.adoc[lien]        |     
 |         | Code V2    |     link:DailyBank[lien]       | 
